# dosbox-staging

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .lsan-suppress  .mailmap  .mdl-styles  .mdlrc  .muon.ini  .pvs-suppress  .pylint  .spellintian-ignore  404.html  AGENTS.md  AUTHORS  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  DOCUMENTATION.md  GetVersion.cmake  INSTALL  KNOWN_GAME_BUGS.md  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES_MPEG.md  README  README.md  RMDOS_API.md  SECURITY.md  THANKS  VERSION  (+23 more)
contrib/benchmark_zlibs/: .gitignore  meson.build  meson_options.txt
contrib/icons/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  dosbox-old.icns  dosbox-staging.icns  icons.md  meson.build  outdated
contrib/resources/: CMakeLists.txt  Resources.cmake  meson.build
contrib/translations/: Makefile  encode.sh  meson.build  update-en.sh  update-sources.sh
extras/icons/: Icons.cmake  Makefile  README.md  meson.build
extras/mcp/: README.md  pyproject.toml  requirements.txt
include/: BitField.h  Makefile.am  Makefile.in  SDL_cdrom.h  SDL_config.h  ansi_code_markup.h  ascii.h  audio_frame.h  audio_vector.h  autoexec.h  bgrx8888.h  bios.h  bios_disk.h  bit_view.h  bitops.h  byteorder.h  callback.h  channel_names.h  checks.h  clipboard.h  cmos.h  compiler.h  config.h  console.h  control.h  cpu.h  cross.h  debug.h  dma.h  dos_inc.h  dos_memory.h  dos_system.h  dos_windows.h  dosbox.h  drives.h  dynlib.h  ems.h  enum.h  envelope.h  ethernet.h  (+76 more)
resources/freedos-keyboard/: .gitattributes  AR462.KEY  AR470.KEY  AZ.KEY  BE.KEY  BG.KEY  BG103.KEY  BG241.KEY  BL.KEY  BN.KEY  BR.KEY  BR274.KEY  BX.KEY  CE.KEY  CE443.KEY  CF.KEY  CF445.KEY  CO.KEY  CZ.KEY  CZ244.KEY  CZ489.KEY  DK.KEY  DV.KEY  ET.KEY  FO.KEY  FR.KEY  FX.KEY  GK.KEY  GK220.KEY  GK459.KEY  GR.KEY  GR453.KEY  HU.KEY  HU208.KEY  HY.KEY  IL.KEY  IS.KEY  IS161.KEY  IT.KEY  IT142.KEY  (+65 more)
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  config.h.in.cmake  dosbox.cpp  dosbox.h  dosbox.lang  dosbox.rc  dosbox_config.h.in  dosbox_config.h.in.cmake  dosbox_pause_fsm.h  main.cpp  mt32options.h  save_state.cpp  save_state.h  version.cpp.in  version.h.in  winres.rc  winres_ko.rc
src/audio/: CMakeLists.txt  README.md  audio_frame.h  channel_names.h  compressor.cpp  compressor.h  dc_remover.cpp  dc_remover.h  disk_noise.cpp  disk_noise.h  envelope.cpp  envelope.h  gate.cpp  gate.h  meson.build  mixer.cpp  mixer.h  noise_gate.cpp  noise_gate.h  opl_capture.cpp  opl_capture.h
src/capture/: CMakeLists.txt  capture.cpp  capture.h  capture_audio.cpp  capture_audio.h  capture_image.cpp  capture_image.h  capture_midi.cpp  capture_midi.h  capture_video.cpp  capture_video.h  capture_video_ffmpeg.cpp  capture_video_zmbv.cpp  image_capturer.cpp  image_capturer.h  image_decoder.h  image_saver.cpp  image_saver.h  image_scaler.cpp  image_scaler.h  meson.build  png_writer.h
src/config/: CMakeLists.txt  config.cpp  config.h  meson.build  setup.cpp  setup.h
src/cpu/: CMakeLists.txt  Makefile.am  Makefile.in  cache.h  callback.cpp  callback.h  core_dyn_x86.cpp  core_dynrec.cpp  core_full.cpp  core_normal.cpp  core_prefetch.cpp  core_simple.cpp  cpu.cpp  cpu.h  cpu_snapshot.cpp  cpu_snapshot.h  dyn_cache.h  flags.cpp  flags.h  instructions.h  lazyflags.h  meson.build  mmx.cpp  mmx.h  modrm.cpp  modrm.h  paging.cpp  paging.h  registers.h  slow_16.cpp  string_ops.h  tsc.cpp
src/debug/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  debug.cpp  debug.cpp.orig  debug.h  debug_disasm.cpp  debug_gui.cpp  debug_helpers.cpp  debug_inc.h  debug_log.cpp  debug_lua.cpp  debug_lua.h  debug_win32.cpp  disasm_tables.h  gdb_server.cpp  meson.build  poll.cpp  poll.h
src/debugger/: CMakeLists.txt  IBM_VGA_8x16.h  debugger.cpp  debugger.h  debugger_api.h  debugger_control.cpp  debugger_control.h  debugger_disasm.cpp  debugger_gui.cpp  debugger_inc.h  debugger_models.h  debugger_win32.cpp  meson.build
src/dos/: CMakeLists.txt  Makefile.am  Makefile.in  Ntddscsi.h  Ntddstor.h  SDL_syscdrom.c  blob_ega3_cpx.cpp  blob_ega5_cpx.cpp  blob_ega_cpx.cpp  blob_keyboard_sys.cpp  blob_keybrd2_sys.cpp  blob_keybrd3_sys.cpp  blobs.h  cdrom.cpp  cdrom.h  cdrom_aspi_win32.cpp  cdrom_image.cpp  cdrom_image.h  cdrom_ioctl.cpp  cdrom_ioctl_linux.cpp  cdrom_ioctl_os2.cpp  cdrom_ioctl_win32.cpp  cdrom_mds.h  cdrom_win32.cpp  dev_con.h  dos.cpp  dos.h  dos_append.cpp  dos_append.h  dos_classes.cpp  dos_code_page.cpp  dos_code_page.h  dos_codepages.h  dos_devices.cpp  dos_execute.cpp  dos_files.cpp  dos_files.h  dos_inc.h  dos_ioctl.cpp  dos_keyboard_layout.cpp  (+93 more)
src/fpu/: CMakeLists.txt  Makefile.am  Makefile.in  fpu.cpp  fpu.h  fpu_flags.cpp  fpu_instructions.h  fpu_instructions_x86.h  fpu_load.h  fpu_types.h  meson.build
src/gui/: CMakeLists.txt  Makefile.am  Makefile.in  Synth.cpp  auto_image_adjustments.cpp  clipboard.cpp  clipboard.h  common.h  d3d_components.h  dosbox_logo.h  dosbox_splash.h  dosbox_staging_splash.c  gui_msgs.h  icon.c  image_settings_manager.cpp  mapper.cpp  mapper.h  menu.cpp  meson.build  midi.cpp  midi_alsa.h  midi_coreaudio.h  midi_coremidi.h  midi_fluidsynth.h  midi_mt32.cpp  midi_mt32.h  (+30 more)
tests/: .gitignore  CMakeLists.txt  Makefile.am  README.md  ansi_code_markup_tests.cpp  autoexec_test.py  batch_file_tests.cpp  bit_view_tests.cpp  bitops_tests.cpp  cfifo.cpp  cmd_move_tests.cpp  cpu_config_param.h  deinterlacer_tests.cpp  dos_append_tests.cpp  dos_files_tests.cpp  dos_memory_struct_tests.cpp  dosbox_pause_fsm_tests.cpp  dosbox_test_fixture.h  drives_tests.cpp  example.cpp  example_tests.cpp  fifo.cpp  format_convert_tests.cpp  fraction_tests.cpp  frame_dirty_tracker_tests.cpp  fs_utils.cpp  fs_utils_tests.cpp  image_compare.cpp  image_compare.h  image_decoder_tests.cpp  indexed_filenames_tests.cpp  int10_modes_tests.cpp  iohandler_containers_tests.cpp  language_territory_tests.cpp  log_msg_knockout.cpp  log_msg_knockout.h  math_utils_tests.cpp  meson.build  messages_adjust_tests.cpp  mixer_tests.cpp  (+31 more)
(+3267 files in other folders)
