# Main Makefile for DOSBox

EXTRA_DIST = autogen.sh
SUBDIRS = src include docs visualc_net

CLEANFILES = \
	Makefile \
	Makefile.in \
	config.guess \
	config.sub \
	install-sh \
	aclocal.m4 \
	configure \
	config.h \
	config.h.in \
	ltmain.sh \
	compile \
	missing \
	depcomp \
	config.status \
	stamp-h1 \
	libtool \
	config.log

clean-local:
	-rm -rf autom4te.cache
